istio/manifest/applications/cassandra.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: mongodb
    namespace: cassandra
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: mongodb
    template:
      metadata:
        labels:
          app: mongodb
      spec:
        containers:
        - image: saifsust/mongodb-server:istio
          imagePullPolicy: IfNotPresent
          name: mongodb-server
          ports:
          - containerPort: 27017
            protocol: TCP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: mysql-server
    namespace: cassandra
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: mysql-server
    template:
      metadata:
        labels:
          app: mysql-server
      spec:
        containers:
        - env:
          - name: MYSQL_ROOT_PASSWORD
            value: password
          image: saifsust/mysql-server:istio
          imagePullPolicy: IfNotPresent
          name: mysql-server
  ### Cassandra Service for Databases
- apiVersion: v1
  kind: Service
  metadata:
    name: mongodb-svc
    namespace: cassandra
  spec:
    ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      app: mongodb
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: mysql-svc
    namespace: cassandra
  spec:
    ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: mysql-server
    type: ClusterIP
  ### Cilium Network Policies
- apiVersion: cilium.io/v2
  kind: CiliumNetworkPolicy
  metadata:
    name: allow-mongodb-from-ratings-v3
    namespace: cassandra
  spec:
    endpointSelector:
      matchLabels:
        app: mongodb
    ingress:
    - fromEndpoints:
      - matchLabels:
          app: ratings
          io.kubernetes.pod.namespace: cks
          version: v3
- apiVersion: cilium.io/v2
  kind: CiliumNetworkPolicy
  metadata:
    name: allow-mysql-from-ratings-v2
    namespace: cassandra
  spec:
    endpointSelector:
      matchLabels:
        app: mysql-server
    ingress:
    - fromEndpoints:
      - matchLabels:
          app: ratings
          io.kubernetes.pod.namespace: cks
          version: v2
- apiVersion: cilium.io/v2
  kind: CiliumNetworkPolicy
  metadata:
    name: deny-all
    namespace: cassandra
  spec:
    egress:
    - {}
    endpointSelector: {}
    ingress:
    - {}
kind: List
metadata:
  resourceVersion: ""
